--- a/índice.html
+++ b/índice.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Index CBTIS 243.</title>
-	<link rel="stylesheet" type="text/css" href="portal 243.CSS">
+	<link rel="stylesheet" type="text/css" href="portal 243.css">
 	<script src="jquery-3.4.1.min.js" type="text/javascript"></script>
 	<script src="js/avisoexterno.js"></script>
 	<script src="js/ocultarmostrarDiv.js"></script>
